demenchuk/examples/errors/parser/11_while_no_condition.riv
# PARSER ERROR: While без условия
# Ожидаемая ошибка: missing expression at line 4

# While требует условие
while:
    write("loop")
